--- a/index.html
+++ b/index.html
@@ -219,40 +219,14 @@
       </div>
 
       <div class="service_container">
-        <div class="box">
-          <div class="img-box">
-            <img src="images/s-1.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h5>
-              Brand Promotion
-            </h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            </p>
-          </div>
-        </div>
-        <div class="box">
-          <div class="img-box">
-            <img src="images/s-2.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h5>
-              Video Marketing
-
-            </h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            </p>
-          </div>
-        </div>
+        
         <div class="box">
           <div class="img-box">
             <img src="images/s-3.png" alt="">
           </div>
           <div class="detail-box">
             <h5>
-              Site Analysis
+              Laporan Kehilangan
             </h5>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -265,7 +239,7 @@
           </div>
           <div class="detail-box">
             <h5>
-              Social Media Marketing
+              Laporan Temuan
             </h5>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit,
